--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       <font color = "white">
 	<font face="verdana">
 		<H1>CHRISTOPHER KENNETH A. ARCEO</H1>
-		<img src="ken 2.jpg" height="250" width="250" alt="Ako" style="border: 3px solid white; border-radius: 10px;">
+		<img src="ken 2.jpg" height="280" width="280" alt="Ken" style="border: 3px solid white; border-radius: 10px;">
 		<p>
 		<P><em>"The future belongs to those who believe in the beauty of their dreams."</em></P>
 		<P><em>"The future is not something we enter. The future is something we create."</em></P>
@@ -47,7 +47,7 @@
                   <br>
 			<img src="telescope.png" height="150" width="150" alt="My Second Hobby">
 			<br><br>
-			<li>love To Watch Anime (I am an Otaku)</li>
+			<li>Love To Watch Anime (I am an Otaku)</li>
                   <br>
 			<img src="watching.png" height="150" width="150" alt="My Third Hobby">
 		
